<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="category_stats"
        android:title="@string/setting_stats_category">
        <eu.sheikhsoft.internetguard.SwitchPreference
            android:defaultValue="false"
            android:key="show_stats"
            android:summary="@string/summary_stats"
            android:title="@string/setting_stats" />
        <eu.sheikhsoft.internetguard.SwitchPreference
            android:defaultValue="false"
            android:dependency="show_stats"
            android:key="show_top"
            android:title="@string/setting_stats_top" />
        <EditTextPreference
            android:defaultValue="1000"
            android:dependency="show_stats"
            android:inputType="number"
            android:key="stats_frequency"
            android:title="@string/sample_interval"/>
        <EditTextPreference
            android:defaultValue="90"
            android:dependency="show_stats"
            android:inputType="number"
            android:key="stats_samples"
            android:title="@string/number_of_sample"/>
    </PreferenceCategory>
</PreferenceScreen>